fixed collapse timing

--- a/static/styles.css
+++ b/static/styles.css
@@ -341,7 +341,9 @@
 .card-header{background-color: rgb(51, 51, 51);}
 
 /* MORE ABOUT FADE IN */
-
+#about{
+    color: rgb(51, 51, 51);
+}
 .card-body{background-color: rgb(51, 51, 51);
     animation: fadeIn ease 2s;
     -webkit-animation: fadeIn ease 2s;
@@ -427,8 +429,8 @@
 .collapsing {
     -webkit-transition-property: height, visibility;
     transition-property: height, visibility;
-    -webkit-transition-duration: 2s;
-    transition-duration: 2s;
+    -webkit-transition-duration: 1.5s;
+    transition-duration: 1.5s;
     -webkit-transition-timing-function: ease;
     transition-timing-function: ease;
   }
